--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-calendar-timeline": "0.30.0-beta.4",
     "react-day-picker": "^9.11.3",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.5.1"
   },
   "devDependencies": {
